--- a/BACKEND/src/main/resources/application.properties
+++ b/BACKEND/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/library?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+#spring.jpa.show-sql: true
