user security register and auth big update

--- a/BACKEND/src/main/resources/application.properties
+++ b/BACKEND/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/library?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 #spring.jpa.show-sql: true
+jwt.secret=secret
+
+
+spring.main.allow-circular-references=true
